Migrate repo to github

--- a/docs/.redoclyrc
+++ b/docs/.redoclyrc
@@ -4,6 +4,6 @@ splitSpec: true
 codeSamples: false
 swaggerUI: true
 travis: true
-repo: tokend/notifications/notifications-router-svc
+repo: github.com/acs-dl/role-svc
 oasVersion: 1.0.0
 
